Fix: enhance Helm chart with improved probe structure, MicroK8s support, and gRPC configuration

--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: model-express
-description: A Helm chart for ModelExpress - a model serving and management platform
+description: A Helm chart for ModelExpress - a AI model cache management service
 type: application
 version: 0.1.1
 appVersion: "1.0.0"
@@ -9,7 +9,7 @@ keywords:
   - ai
   - machine-learning
   - inference
-home: https://github.com/nvidia/model-express
+home: https://github.com/ai-dynamo/modelexpress/
 sources:
-  - https://github.com/nvidia/model-express
-icon: https://raw.githubusercontent.com/nvidia/model-express/main/ModelExpressTrainLogo.jpeg
+  - https://github.com/ai-dynamo/modelexpress/
+icon: https://raw.githubusercontent.com/ai-dynamo/modelexpress/refs/heads/main/ModelExpressTrainLogo.jpeg
