--- a/helm/test-values.yaml
+++ b/helm/test-values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 image:
   repository: nvcr.io/nvidian/dynamo-dev/modelexpress-server-beta
   pullPolicy: IfNotPresent
-  tag: "0.1.1rc0"
+  tag: "0.1.1rc1"
 
 serviceAccount:
   create: true
@@ -40,25 +40,25 @@ env:
   MODEL_EXPRESS_SERVER_PORT: "8001"
   MODEL_EXPRESS_LOGGING_LEVEL: "debug"
   MODEL_EXPRESS_DATABASE_PATH: "/app/models.db"
-  MODEL_EXPRESS_CACHE_DIRECTORY: "/app/cache"
+  MODEL_EXPRESS_CACHE_DIRECTORY: "/root"
 
-probes:
-  liveness:
-    enabled: true
-    tcpSocket:
-      port: 8001
-    initialDelaySeconds: 5
-    periodSeconds: 10
-    timeoutSeconds: 5
-    failureThreshold: 3
-  readiness:
-    enabled: true
-    tcpSocket:
-      port: 8001
-    initialDelaySeconds: 5
-    periodSeconds: 10
-    timeoutSeconds: 5
-    failureThreshold: 3
+livenessProbe:
+  enabled: true
+  tcpSocket:
+    port: 8001
+  initialDelaySeconds: 15
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 3
+
+readinessProbe:
+  enabled: true
+  tcpSocket:
+    port: 8001
+  initialDelaySeconds: 15
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 3
 
 nodeSelector: {}
 
