expand home directory and share the functionaility across code

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,6 +43,7 @@ repos:
             "--all-targets",
             "--all-features",
             "--fix",
+            "--allow-dirty",
             "--",
             "-D",
             "warnings",
