--- a/modelexpress_common/Cargo.toml
+++ b/modelexpress_common/Cargo.toml
@@ -30,6 +30,7 @@ jiff = { workspace = true }
 mockall = "0.13"
 tempfile = "3.20"
 tokio-test = "0.4"
+wiremock = "0.6.5"
 
 [build-dependencies]
 tonic-build = { workspace = true }
