--- a/modelexpress_client/Cargo.toml
+++ b/modelexpress_client/Cargo.toml
@@ -3,14 +3,17 @@
 
 [package]
 name = "modelexpress-client"
-version = "0.1.0"
-edition = "2024"
-license = "Apache-2.0"
 description = "Client library for Model Express gRPC server"
-repository = "https://github.com/ai-dynamo/modelexpress"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+keywords.workspace = true
 
 [dependencies]
-modelexpress-common = { version = "0.1.0", path = "../modelexpress_common" }
+modelexpress-common = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
