--- a/modelexpress_common/Cargo.toml
+++ b/modelexpress_common/Cargo.toml
@@ -3,11 +3,14 @@
 
 [package]
 name = "modelexpress-common"
-version = "0.1.0"
-edition = "2024"
-license = "Apache-2.0"
 description = "Shared utilities for Model Express client and server"
-repository = "https://github.com/ai-dynamo/modelexpress"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+keywords.workspace = true
 
 [dependencies]
 serde = { workspace = true }
