--- a/modelexpress_server/Cargo.toml
+++ b/modelexpress_server/Cargo.toml
@@ -3,14 +3,18 @@
 
 [package]
 name = "modelexpress-server"
-version = "0.1.0"
-edition = "2024"
-license = "Apache-2.0"
 description = "High-performance gRPC server for model serving and management"
-repository = "https://github.com/ai-dynamo/modelexpress"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+keywords.workspace = true
+
 
 [dependencies]
-modelexpress-common = { version = "0.1.0", path = "../modelexpress_common" }
+modelexpress-common = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
