--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "model-express.serviceAccountName" . }}
+  name: {{ include "modelexpress.serviceAccountName" . }}
   labels:
-    {{- include "model-express.labels" . | nindent 4 }}
+    {{- include "modelexpress.labels" . | nindent 4 }}
   {{- if and .Values.serviceAccount .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
