--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: model-express
+name: modelexpress
 description: A Helm chart for ModelExpress - a AI model cache management service
 type: application
 version: 0.2.0
