--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+
 apiVersion: v2
 name: modelexpress
 description: A Helm chart for ModelExpress - a AI model cache management service
