--- a/helm/test-values.yaml
+++ b/helm/test-values.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+
 # Test values for ModelExpress Helm chart validation
 replicaCount: 1
 
