--- a/helm/values-production.yaml
+++ b/helm/values-production.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+
 # Production values for ModelExpress
 replicaCount: 3
 
