fix: Add references to new release image (#92)

--- a/helm/values-development.yaml
+++ b/helm/values-development.yaml
@@ -5,9 +5,9 @@
 replicaCount: 1
 
 image:
-  repository: nvcr.io/nvidian/dynamo-dev/modelexpress-server-beta
+  repository: nvcr.io/nvidia/ai-dynamo/modelexpress-server
   pullPolicy: IfNotPresent
-  tag: "0.1.1rc1"
+  tag: "0.2.0"
 
 serviceAccount:
   create: true
