define nixl transfer api
Signed-off-by: Hyunjae Woo <hwoo@nvidia.com>

--- a/modelexpress_server/Cargo.toml
+++ b/modelexpress_server/Cargo.toml
@@ -12,9 +12,9 @@ homepage.workspace = true
 repository.workspace = true
 keywords.workspace = true
 
-
 [dependencies]
 modelexpress-common = { workspace = true }
+nixl-sys = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
