fix: rename model-express-cli to modelexpress-cli for consistency (#103)
Signed-off-by: Harrison King Saturley-Hall <hsaturleyhal@nvidia.com>
Signed-off-by: Harrison Saturley-Hall <harrison.saturley.hall@gmail.com>
Co-authored-by: Nicolas Noble <nicolasnoble@users.noreply.github.com>

--- a/examples/aggregated_k8s/agg.yaml
+++ b/examples/aggregated_k8s/agg.yaml
@@ -92,7 +92,7 @@ spec:
 
               echo "Waiting for server to be ready..."
               for i in {1..60}; do
-                if ./model-express-cli --endpoint http://localhost:8000 health > /dev/null 2>&1; then
+                if ./modelexpress-cli --endpoint http://localhost:8002 health > /dev/null 2>&1; then
                   echo "Server is ready!"
                   break
                 fi
