chore: update copyright year to 2025-2026 in all files
Updates SPDX copyright headers from 2025 to 2025-2026 to fix
copyright-check CI failures.

Signed-off-by: Kavin Krishnan <kavink@nvidia.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 # This Dockerfile can be used instead of the image property in devcontainer.json
 # for more advanced customization
