feat: Add P2P GPU-to-GPU weight transfer via NIXL/RDMA
Add complete P2P weight transfer system for GPU-to-GPU model transfers:

## Python Client
- `vllm_loader.py`: Custom vLLM loaders (MxSourceModelLoader, MxTargetModelLoader)
  for transferring FP8 model weights BEFORE processing
- `nixl_transfer.py`: NIXL transfer manager with contiguous region support
- `vllm_extension.py`: vLLM worker extension for ZMQ-based transfers
- `client.py`: CLI client for P2P operations
- `types.py`: TensorDescriptor and WorkerMetadata types

## Rust Server
- `p2p_service.rs`: gRPC service for PublishMetadata/GetMetadata
- `state.rs`: Redis-backed P2P state manager with worker merging

## Kubernetes Examples
- `vllm-source.yaml`: Source vLLM deployment with NIXL ready signal
- `vllm-target.yaml`: Target vLLM deployment with coordination
- `modelexpress-server.yaml`: Server with Redis sidecar
- `Dockerfile.client`: Client image with vLLM loader patches

## Documentation
- `CLAUDE.md`: AI assistant context for the codebase
- `CONTEXT.md`: Detailed engineering context

Key features:
- GPU-to-GPU RDMA transfers via NIXL/UCX
- FP8 model support (DeepSeek-V3, etc.)
- Redis-based source-target coordination
- Baseline mode with individual tensor transfers
- Experimental contiguous region support (MX_CONTIGUOUS_REG)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 
 [workspace]
@@ -52,6 +52,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 futures = "0.3"
 uuid = { version = "1.17", features = ["v4", "serde"] }
 thiserror = "2.0"
+redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
 
 [workspace.lints.clippy]
 all = { level = "deny", priority = -1 }
