--- a/examples/p2p_transfer_k8s/Dockerfile.client
+++ b/examples/p2p_transfer_k8s/Dockerfile.client
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 
 FROM vllm/vllm-openai:v0.12.0 AS builder
