--- a/examples/p2p_transfer_k8s/vllm-source.yaml
+++ b/examples/p2p_transfer_k8s/vllm-source.yaml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 
 # vLLM Source Instance - loads real model weights and serves them to target via P2P
